testCases/parserTestCases/correct/statement.cs16
/*
    This tests statements
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

void main(int x){
    int y;

    y := 5;

    if( y = 5 ){
        int t;
        t:=-1;
        y := t*y;
    }

    if( y > 0 ){
        int t;
        t:=-1;
        y := t*y;
    }
    else
        y := 10;

    {;}

    {int one; one := 2;;}

    loop{
        bool doop;
        loop ; end;
    }
    {;}
    end;

    {{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{;
    }}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}


}