testCases/parserTestCases/error/statementE.cs16
/*
    This tests statements
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

void main(int x){
    int y;

    y = 5;
    y := ;
    y := 5

    if y = 5 ){
        int t;
        t:=-1;
        y := t*y;
    }

    if( y > 0 {
        int t;
        t:=-1;
        y := t*y;
    }
    else
        y := 10;

    {}

    {int one; one := 2;;

    loop{
        bool doop;
        loop  end;
    }
    {;}
    end;

    {{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{;
    }}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}

    loop
        if( 1 = 2 )
            exit;
        continue;
        {int shoes,kitties;
            y := y - 1;
            if( shoes = kitties )
                exit;
            else if ( y = -999999999)
                continue;
        }
    end


    branch(y)
        case 5: ;
    end;

    branch()
        case 5: ;
    end;

    branch()
        case 5 ;
    end;

    branch()
        case : ;
    end;

    branch()
        default:;
    end;

    branch()
        default 5:;
    end;

    branch



    y

    )
            case
             5


             :


              ;
        end

        ;


    branch(y
        case 5:;
        default:
            loop
                loop
                    loop
                        loop
                            loop
                                loop
                                    loop
                                        loop
                                            loop
                                                loop
                                                    loop
                                                       exit;

                                                    end;
                                                    exit;
                                                end;
                                                exit;
                                            end;
                                            exit;
                                        end;
                                        exit;
                                    end;
                                    exit;
                                end;
                                exit;
                            end;
                            exit;
                        end;
                        exit;
                    end;
                    exit;
                end;
                exit;
            end;
    end;



}